ajuste core, new game TicTacToe, ajuste conversor hex to bin

--- a/Game Core - Face/Utils/hex to bin - JavaScript/index.html
+++ b/Game Core - Face/Utils/hex to bin - JavaScript/index.html
@@ -12,7 +12,7 @@
   <h5>Types: 0x00 - Execute, 0x01 - Image, 0x02 - Text</h5>
 
   <p>Nome:
-  <input style="text-transform:uppercase" type="text" id="inputText" maxlength="16">
+  <input type="text" id="inputText" maxlength="16">
    (Max 16 caracteres)
   </p>
   <p>Selecione tipo:
